# RayTracer

./: CMakeLists.txt  README.md
Dependencies/: LinkDependencies.cmake  LinkGLFW.cmake  LinkGlad.cmake  LinkImGui.cmake  LinkOpenGL.cmake
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
enc_temp_folder/2494d962d5d8f5f53f8566618a706989/: ControlsWindow.cpp
src/: Application.cpp  Main.cpp
src/App/: App.cpp  App.h  MainUI.cpp  MainUI.h
src/Scene/: Hittable.h  HittableScene.cpp  HittableScene.h
src/Scene/Hittable/: HitRecord.h  Hittable.h  HittableObject.h  HittableScene.cpp  HittableScene.h
src/Scene/Materials/: AllMaterials.h  Lambertian.h  Material.h  Metal.h  Refractive.h
src/Scene/Shapes/: Sphere.cpp  Sphere.h
src/Shapes/: Sphere.cpp  Sphere.h
src/core/: Camera.cpp  Camera.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h
src/core/BVH/: BVH_Node.cpp  BVH_Node.h  BVH_Tree.cpp  BVH_Tree.h  BoundingBox.cpp  BoundingBox.h
src/core/Windows/: ControlsWindow.cpp  ControlsWindow.h  IWindow.h  RenderedImageWindow.cpp  RenderedImageWindow.h  StatsWindow.cpp  StatsWindow.h  WindowsBuilder.cpp  WindowsBuilder.h
src/utils/: Color.h  Interval.h  Ray.cpp  Ray.h  RenderedImageSettings.h  custom_concepts.h  utils.h  vec3.h
src/utils/Metrics/: RayIntersectionCounter.h  RenderingTimer.h
